--- a/Beacons/app/src/main/res/menu/main_menu.xml
+++ b/Beacons/app/src/main/res/menu/main_menu.xml
@@ -4,9 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
-    <item android:id="@+id/menu_item"
+    <item android:id="@+id/menu_item_title"
         android:title="@string/menu_title_start"
         android:titleCondensed="@string/menu_title_start"
+        app:showAsAction="always"
+        />
+    <item android:id="@+id/menu_item"
+        android:title=""
         android:icon="@drawable/ic_action_playback_pause"
         app:showAsAction="always"
         />
